--- a/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
+++ b/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
@@ -128,7 +128,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="3SW-b3-pb8" style="IBUITableViewCellStyleDefault" id="cvz-Nq-TI7">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="3SW-b3-pb8" style="IBUITableViewCellStyleDefault" id="cvz-Nq-TI7">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cvz-Nq-TI7" id="G4S-Ae-2II">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -141,6 +141,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="VWW-ck-AZh" kind="show" id="I33-ss-7Wr"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="9oJ-4L-YZt" style="IBUITableViewCellStyleDefault" id="AQL-rM-EFX">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -346,7 +349,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hZP-ba-5cX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-166" y="9578"/>
+            <point key="canvasLocation" x="-126" y="10722"/>
         </scene>
         <!--News Table View Controller-->
         <scene sceneID="mC1-zj-2l0">
@@ -402,7 +405,82 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="enu-1p-sd9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="694" y="9578"/>
+            <point key="canvasLocation" x="734" y="10722"/>
+        </scene>
+        <!--Settings Table View Controller-->
+        <scene sceneID="s57-X5-A2W">
+            <objects>
+                <tableViewController id="VWW-ck-AZh" customClass="SettingsTableViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="dEN-5P-vLd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection headerTitle="Music" id="w5k-gg-PH8">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="be9-aP-bAW">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="be9-aP-bAW" id="k5I-0T-1dG">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Site for playing tunes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdU-lH-oQb">
+                                                    <rect key="frame" x="8" y="11" width="453" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="453" id="s9O-xL-4AA"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="1ok-HF-aHD">
+                                                    <rect key="frame" x="469" y="8" width="123" height="29"/>
+                                                    <segments>
+                                                        <segment title="iTunes"/>
+                                                        <segment title="YouTube"/>
+                                                    </segments>
+                                                    <connections>
+                                                        <action selector="valueChangedSitePlayingTunesSegment:" destination="VWW-ck-AZh" eventType="valueChanged" id="t6J-uS-KfV"/>
+                                                    </connections>
+                                                </segmentedControl>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="1ok-HF-aHD" firstAttribute="top" secondItem="k5I-0T-1dG" secondAttribute="topMargin" id="DFs-aV-ch1"/>
+                                                <constraint firstItem="1ok-HF-aHD" firstAttribute="leading" secondItem="tdU-lH-oQb" secondAttribute="trailing" constant="8" symbolic="YES" id="MqQ-M8-hrr"/>
+                                                <constraint firstItem="tdU-lH-oQb" firstAttribute="baseline" secondItem="1ok-HF-aHD" secondAttribute="firstBaseline" id="RSP-DX-lVh"/>
+                                                <constraint firstItem="tdU-lH-oQb" firstAttribute="centerY" secondItem="k5I-0T-1dG" secondAttribute="centerY" id="WhI-gZ-wTD"/>
+                                                <constraint firstItem="1ok-HF-aHD" firstAttribute="baseline" secondItem="tdU-lH-oQb" secondAttribute="firstBaseline" id="mQ4-r0-0Yc"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="1ok-HF-aHD" secondAttribute="trailing" constant="-7" id="we2-9E-a4u"/>
+                                                <constraint firstItem="tdU-lH-oQb" firstAttribute="leading" secondItem="k5I-0T-1dG" secondAttribute="leadingMargin" constant="-7" id="zsY-CR-G8j"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="jhc-YU-tNP">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jhc-YU-tNP" id="Sf1-KP-IIi">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="x6L-Cy-jMh">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x6L-Cy-jMh" id="uOs-Rf-HuS">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="VWW-ck-AZh" id="fwY-Is-8ie"/>
+                            <outlet property="delegate" destination="VWW-ck-AZh" id="1Ij-hq-xuX"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="siteForPlayingTunesSegmentedControl" destination="1ok-HF-aHD" id="g1U-Eh-mdo"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yAH-81-vds" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1534" y="9992"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="aNV-ie-KXQ">
@@ -421,7 +499,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CFY-gt-1Rq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1430" y="9578"/>
+            <point key="canvasLocation" x="1470" y="10722"/>
         </scene>
         <!--Seminars-->
         <scene sceneID="bJE-de-XzW">
@@ -461,7 +539,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xwn-Jj-6fn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="694" y="10308"/>
+            <point key="canvasLocation" x="734" y="11452"/>
         </scene>
         <!--Making Coffee-->
         <scene sceneID="fOq-pY-ZaO">
@@ -558,7 +636,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xe3-6t-i7W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="690" y="11016"/>
+            <point key="canvasLocation" x="730" y="12160"/>
         </scene>
         <!--Products For Sale Table View Controller-->
         <scene sceneID="hhW-1l-Dfm">
@@ -590,7 +668,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c11-08-n16" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="686" y="11792"/>
+            <point key="canvasLocation" x="726" y="12936"/>
         </scene>
         <!--Pairings Table View Controller-->
         <scene sceneID="QD2-mw-hJr">
@@ -622,7 +700,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H0g-hR-sB7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="686" y="12536"/>
+            <point key="canvasLocation" x="726" y="13680"/>
         </scene>
         <!--Official Contents Table View Controller-->
         <scene sceneID="X3Y-i4-JpD">
@@ -720,7 +798,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2XE-Pz-l1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="686" y="13306"/>
+            <point key="canvasLocation" x="726" y="14450"/>
         </scene>
         <!--Tunes Table View Controller-->
         <scene sceneID="gCG-4d-Or8">
@@ -750,9 +828,6 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="GWo-Ob-YX1" kind="presentation" id="470-DZ-FSK"/>
-                                </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="prototypeTunesTableViewCell" id="F4k-5a-baw">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -766,10 +841,14 @@
                             <outlet property="delegate" destination="xb5-AI-8BC" id="I8r-xr-WIF"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="3Iy-Uv-tJO" kind="show" identifier="WebViewSegue" id="trP-t4-TT0"/>
+                        <segue destination="GWo-Ob-YX1" kind="presentation" identifier="AVPlayerViewSegue" id="kNT-fO-Zek"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ofG-jh-4es" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="684" y="14030"/>
+            <point key="canvasLocation" x="724" y="15174"/>
         </scene>
         <!--BaseWK Web View Controller-->
         <scene sceneID="sQZ-8R-nF3">
@@ -787,7 +866,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Abn-eM-aJG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1422" y="13306"/>
+            <point key="canvasLocation" x="1462" y="14450"/>
         </scene>
         <!--AV Player View Controller-->
         <scene sceneID="rk9-1u-rWd">
@@ -797,7 +876,7 @@
                 </avPlayerViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jeL-EK-JgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1422" y="14030"/>
+            <point key="canvasLocation" x="1462" y="15174"/>
         </scene>
         <!--Making Coffee Page-->
         <scene sceneID="PvB-Ul-Tp1">
@@ -807,7 +886,7 @@
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4cm-ns-0Mi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1422" y="11016"/>
+            <point key="canvasLocation" x="1462" y="12160"/>
         </scene>
         <!--Making Coffee Page Content-->
         <scene sceneID="tUF-8V-EPM">
@@ -863,7 +942,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dk9-Dq-3Ms" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2104" y="11016"/>
+            <point key="canvasLocation" x="2144" y="12160"/>
         </scene>
         <!--SBUX-->
         <scene sceneID="WKr-Cp-CSh">
@@ -880,7 +959,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oac-6t-LYD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1018" y="9578"/>
+            <point key="canvasLocation" x="-978" y="10722"/>
         </scene>
         <!--Menu-->
         <scene sceneID="9CI-pU-huI">
@@ -2945,10 +3024,10 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="dSr-Vk-QH8"/>
         <segue reference="q32-EZ-W3P"/>
-        <segue reference="anI-vT-f9C"/>
+        <segue reference="trP-t4-TT0"/>
         <segue reference="sjz-A2-gN9"/>
         <segue reference="Kq9-1X-68d"/>
+        <segue reference="dSr-Vk-QH8"/>
     </inferredMetricsTieBreakers>
 </document>
